--- a/buildSrc/src/main/resources/website/src/app/component/data-list-entry/data-list-entry.component.css
+++ b/buildSrc/src/main/resources/website/src/app/component/data-list-entry/data-list-entry.component.css
@@ -1,16 +1,3 @@
-.clickable {
-	cursor: pointer;
-	transition: background-color 0.2s;
-}
-
-.icon {
-	margin: 0;
-}
-
-.clickable:hover {
-	background-color: rgba(127, 127, 127, 20%);
-}
-
 .title {
 	font-weight: bold;
 }
@@ -20,7 +7,7 @@
 }
 
 .light-color {
-	color: rgba(127, 127, 127, 80%);
+	color: var(--light-color);
 }
 
 .color {
