--- a/buildSrc/src/main/resources/website/src/app/component/station-panel/station-panel.component.css
+++ b/buildSrc/src/main/resources/website/src/app/component/station-panel/station-panel.component.css
@@ -1,9 +1,20 @@
+.chips {
+	display: flex;
+	flex-flow: row wrap;
+}
+
 .chip {
-	--mdc-chip-outline-color: transparent;
+	border-radius: var(--p-button-border-radius);
+	transition: box-shadow 0.2s;
+	padding: 0.5em;
 }
 
 .chip-text {
 	font-size: 0.8em;
 	font-weight: 600;
 	line-height: 1.2em;
+}
+
+.small-divider {
+	--p-divider-horizontal-margin: 1px 0;
 }
